{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 14,
  "lineage": "efce0cc4-3ed4-2a21-e875-20b93160aab6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "week4-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:857518908901:instance/i-0b8b118bb05a191cd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8b118bb05a191cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ECE592.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0173072972b565a0a",
            "private_dns": "ip-10-0-1-109.ec2.internal",
            "private_ip": "10.0.1.109",
            "public_ip": "35.153.53.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a80e15006772c0f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bff5c1450deeed25",
            "tags": {
              "Name": "week4-vm"
            },
            "tags_all": {
              "Name": "week4-vm"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b4084fd251308a7a"
            ]
          },
          "dependencies": [
            "aws_security_group.week4-ssh-sg",
            "aws_subnet.week4-subnet-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "week4-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857518908901:internet-gateway/igw-07d66d22bcde0b34d",
            "id": "igw-07d66d22bcde0b34d",
            "owner_id": "857518908901",
            "tags": {
              "Name": "week4-igw"
            },
            "tags_all": {
              "Name": "week4-igw"
            },
            "vpc_id": "vpc-0de84a3aee0caf57c"
          },
          "dependencies": [
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "week4-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857518908901:route-table/rtb-0f6c31e9f3899ea33",
            "id": "rtb-0f6c31e9f3899ea33",
            "owner_id": "857518908901",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d66d22bcde0b34d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "week4-rt"
            },
            "tags_all": {
              "Name": "week4-rt"
            },
            "vpc_id": "vpc-0de84a3aee0caf57c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.week4-igw",
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "week4-ssh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857518908901:security-group/sg-0b4084fd251308a7a",
            "description": "AllowSSHinboundtraffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowalloutbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4084fd251308a7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "week4-ssh-sg",
            "name_prefix": "",
            "owner_id": "857518908901",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "week4-ssh-sg"
            },
            "tags_all": {
              "Name": "week4-ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de84a3aee0caf57c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "week4-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857518908901:subnet/subnet-0bff5c1450deeed25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0bff5c1450deeed25",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "857518908901",
            "tags": {
              "Name": "week4-subnet-a"
            },
            "tags_all": {
              "Name": "week4-subnet-a"
            },
            "vpc_id": "vpc-0de84a3aee0caf57c"
          },
          "dependencies": [
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "week4-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857518908901:subnet/subnet-0745e87900a4ce87a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0745e87900a4ce87a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "857518908901",
            "tags": {
              "Name": "week4-subnet-b"
            },
            "tags_all": {
              "Name": "week4-subnet-b"
            },
            "vpc_id": "vpc-0de84a3aee0caf57c"
          },
          "dependencies": [
            "aws_vpc.week4-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "week4-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857518908901:vpc/vpc-0de84a3aee0caf57c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7a66f4cb150601e",
            "default_route_table_id": "rtb-003262e896839e488",
            "default_security_group_id": "sg-03bcaf918fb4fa49a",
            "dhcp_options_id": "dopt-6e6f7514",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0de84a3aee0caf57c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-003262e896839e488",
            "owner_id": "857518908901",
            "tags": {
              "Name": "week4-vpc"
            },
            "tags_all": {
              "Name": "week4-vpc"
            }
          }
        }
      ]
    }
  ]
}